--- a/src/main/resources/music-static/src/app/indoor/views/base/base.component.html
+++ b/src/main/resources/music-static/src/app/indoor/views/base/base.component.html
@@ -1,6 +1,6 @@
 <section class="vbox">
   <header class="bg-white-only header header-md navbar navbar-fixed-top-xs">
-    <m-header></m-header>
+    <m-header [searchKey]="search"></m-header>
   </header>
   <section>
     <section class="hbox stretch">
@@ -9,7 +9,7 @@
           <m-menu></m-menu>
         </section>
       </aside>
-      <section id="uniqueEmail">
+      <section id="content">
         <section class="hbox stretch">
           <section>
             <section class="vbox">
