--- a/src/main/resources/music-static/src/app/indoor/views/search/search.component.html
+++ b/src/main/resources/music-static/src/app/indoor/views/search/search.component.html
@@ -1,7 +1,19 @@
-result
-<ul>
-  <li *ngFor="let item of songs">
-    {{item.title}}
-  </li>
-</ul>
-<m-pagination [receiver]="sender" (currentUpdate)="updateSearch($event)"></m-pagination>
+<h2 class="font-thin m-b">
+  Search Result
+  <span class="musicbar animate inline m-l-sm" style="width:20px;height:20px">
+    <span class="bar1 a1 bg-primary lter">
+    </span>
+    <span class="bar2 a2 bg-info lt"></span>
+    <span class="bar3 a3 bg-success"></span>
+    <span class="bar4 a4 bg-warning dk"></span>
+    <span class="bar5 a5 bg-danger dker"></span>
+  </span>
+</h2>
+<div class="row row-sm">
+  <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2" *ngFor="let s of songs">
+    <m-song [song]="s" [from]="songs"></m-song>
+  </div>
+</div>
+<div class="m-b">
+  <button (click)="loadMore()" [ngClass]="{'disabled': !load}" class="disabled btn btn-s-md btn-success col-md-offset-5">Load More</button>
+</div>
