--- a/src/main/resources/music-static/src/app/outdoor/signup/signup.component.html
+++ b/src/main/resources/music-static/src/app/outdoor/signup/signup.component.html
@@ -1,4 +1,4 @@
-<section id="uniqueEmail" class="m-t-lg wrapper-md animated fadeInDown">
+<section id="content" class="m-t-lg wrapper-md animated fadeInDown">
   <div class="container aside-xl">
     <a class="navbar-brand block">
       <span class="h1 font-bold">Musik</span>
